[gd_scene load_steps=11 format=3 uid="uid://b464gwurxxded"]

[ext_resource type="Script" uid="uid://bex0io08bo04b" path="res://scenes/game_scene/begin/plant_growth_manager.gd" id="1_1a2b3"]
[ext_resource type="SpineSkeletonDataResource" uid="uid://cs7uuetomhd0" path="res://scenes/game_scene/begin/plant-stage-0/plat_root.tres" id="2_4c5d6"]
[ext_resource type="SpineSkeletonDataResource" uid="uid://bjejs33tnsfr2" path="res://scenes/game_scene/begin/plant-stage-1/plant-leaves.tres" id="3_7e8f9"]
[ext_resource type="Texture2D" uid="uid://byqm54pno7v46" path="res://scenes/game_scene/begin/plant-stage-2/plant-stage-2.png" id="4_0g1h2"]
[ext_resource type="Texture2D" uid="uid://do72r2yspc0wy" path="res://scenes/game_scene/begin/plant-stage-3/plant-stage-3.png" id="5_3i4j5"]
[ext_resource type="Texture2D" uid="uid://bym2datxl6yfl" path="res://scenes/game_scene/begin/plant-stage-4/plant-stage-4.png" id="6_6k7l8"]
[ext_resource type="Texture2D" uid="uid://cn0psyfead2o4" path="res://scenes/game_scene/begin/plant-stage-5/plant-stage-5.png" id="7_9m0n1"]
[ext_resource type="Texture2D" uid="uid://bd5va5gib4ske" path="res://scenes/game_scene/begin/plant-stage-6/plant-stage-6.png" id="8_2o3p4"]
[ext_resource type="Script" uid="uid://x3twdsmrj18a" path="res://scenes/game_scene/begin/plant_tower.gd" id="9_5q6r7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1"]
height = 200.0

[node name="PlantComponent" type="StaticBody2D"]
collision_mask = 2
script = ExtResource("9_5q6r7")

[node name="PlantGrowthManager" type="Node2D" parent="."]
script = ExtResource("1_1a2b3")

[node name="RootStage" type="SpineSprite" parent="PlantGrowthManager"]
scale = Vector2(0.2, 0.2)
skeleton_data_res = ExtResource("2_4c5d6")
preview_skin = "Default"
preview_animation = "-- Empty --"
preview_frame = false
preview_time = 0.0

[node name="LeavesStage" type="SpineSprite" parent="PlantGrowthManager"]
scale = Vector2(0.2, 0.2)
skeleton_data_res = ExtResource("3_7e8f9")
preview_skin = "Default"
preview_animation = "-- Empty --"
preview_frame = false
preview_time = 0.0

[node name="Stage2" type="Sprite2D" parent="PlantGrowthManager"]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_0g1h2")

[node name="Stage3" type="Sprite2D" parent="PlantGrowthManager"]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3i4j5")

[node name="Stage4" type="Sprite2D" parent="PlantGrowthManager"]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_6k7l8")

[node name="Stage5" type="Sprite2D" parent="PlantGrowthManager"]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_9m0n1")

[node name="Stage6" type="Sprite2D" parent="PlantGrowthManager"]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_2o3p4")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -28.0
offset_top = 65.0
offset_right = 57.0
offset_bottom = 92.0
scale = Vector2(0.727329, 0.501867)
max_value = 500.0

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 102)
shape = SubResource("CapsuleShape2D_1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
